# fowdr

./: LICENSE.txt  README.md  setup.cfg  setup.py
doc/: examples.ipynb  fowdr.ipynb
docs/: README.md  examples.ipynb  fowdr.ipynb
src/fowdr/: asdr.py  sbdr.py
src/fowdr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
