[metadata]
name = fowdr
version = 1.1
author = Huaiyu Duan
author_email = duan@unm.edu
description = A package that computes the dispersion relations of the fast flavor oscillations wave in dense neutrino gases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikeduan/fowdr.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
